invisible border in sidebar bugfix

--- a/css/_widgets.scss
+++ b/css/_widgets.scss
@@ -377,7 +377,7 @@
 .widget_pages li,
 .widget_recent_comments li,
 .widget_recent_entries li {
-	border-top: 1px solid $c;
+	border-top: 1px solid $cw;
 	padding: 0.5em 0 0.5em;
 }
 
